--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 header{
     width: 100%;
     height: 10vh;
+    position: fixed;
+    z-index: 0;
+    background-color:white;
  
 }
 
@@ -15,6 +18,7 @@ header{
     float: right;
     margin-right: 30px;
     margin-top: 15px;
+    
 }
 
  
@@ -32,6 +36,7 @@ button{
     width: 20%;
     font-size: 15px;
     font-weight: bold;
+    
 }
 a{
     text-decoration: none;
@@ -48,8 +53,8 @@ main {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
     margin-bottom: 5px;
+    
   }
   
   .main_content {
@@ -181,7 +186,7 @@ main {
     top: 180%;
     margin-top: 120px;
 }
-@media screen and ( max-width:450px){
+@media screen and ( max-width:900px){
     h1{
         font-size: 20px;
         font-weight: bold;
@@ -208,8 +213,10 @@ main {
 }
 .icone{
     float: left;
- width: 40%;
- height: 100px;
+ width: 20%;
+ height: 60px;
+ margin-left: 70px;
+ margin-top: 20px;
 }
 .small{
  float: right;
@@ -220,4 +227,5 @@ main {
 }
 
 }
+
 
