--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
     width: 100%;
     height: 10vh;
     position: fixed;
-    z-index: 0;
+  
     background-color:white;
  
 }
@@ -54,7 +54,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 5px;
-    
+    /* position: relative;
+    z-index: -1; */
   }
   
   .main_content {
@@ -63,6 +64,7 @@ main {
       top: 40%;
       left: 30%;
       position: absolute;
+     z-index: 1;
     
   }
 .big{
