--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     box-sizing: border-box;
     margin: 0;
 }
+body{
+    background-color: white;
+}
 /* this is my header css */
 header{
     width: 100%;
