--- a/style.css
+++ b/style.css
@@ -26,10 +26,10 @@ header{
 
  
 h1{
-    font-size: 40px;
+    font-size: 60px;
     font-weight: bold;
 text-align: center;
-padding-top: 100px;
+padding-top: 140px;
 
 }
 button{
@@ -67,10 +67,10 @@ main {
       text-align: center;
       color: white;
       top: 40%;
-      left: 30%;
+      left: 20%;
       position: absolute;
      z-index: 1;
-    
+    margin-right: 200px;
   }
 .big{
     width: 30%;
@@ -197,8 +197,17 @@ main {
     margin-top: 120px;
 }
 @media screen and ( max-width:900px){
+    .main_content {
+        text-align: center;
+        color: white;
+        top: 40%;
+        left: 25%;
+        position: absolute;
+       z-index: 1;
+      margin-right: 80px;
+    }
     h1{
-        font-size: 20px;
+        font-size: 40px;
         font-weight: bold;
     text-align: center;
     padding-top: 100px;
