--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 body{
-    background-color: white;
+    background-color: rgb(223, 217, 217);
 }
 /* this is my header css */
 header{
@@ -22,6 +22,7 @@ header{
     margin-right: 30px;
     margin-top: 15px;
     
+    
 }
 
  
@@ -36,13 +37,15 @@ button{
     background-color: yellow;
     border-radius: 5px;
     height: 40px;
-    width: 20%;
-    font-size: 15px;
+    width: 10%;
+    font-size: 20px;
     font-weight: bold;
+    
     
 }
 a{
     text-decoration: none;
+    
 }
 button:hover{
     background-color:red;
@@ -52,11 +55,13 @@ a:hover{
 }
 main {
     background-image: url("assets/reichstag.jpg");
+    width: 100%;
     height:120vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 5px;
+   
     /* position: relative;
     z-index: -1; */
   }
@@ -67,10 +72,11 @@ main {
       text-align: center;
       color: white;
       top: 40%;
-      left: 20%;
+      left: 10%;
       position: absolute;
      z-index: 1;
     margin-right: 200px;
+    width: 80%;
   }
 .big{
     width: 30%;
