--- a/style.css
+++ b/style.css
@@ -10,19 +10,24 @@ header{
     width: 100%;
     height: 10vh;
     position: fixed;
-  
+  z-index: 3;
     background-color:white;
  
 }
 
 .menu{
+    position: absolute;
+    right: 0;
     height: 60px;
     width: 50px;
-    float: right;
     margin-right: 30px;
     margin-top: 15px;
     
     
+}
+.logo{
+    position: absolute;
+    left: 0;
 }
 
  
@@ -30,7 +35,9 @@ h1{
     font-size: 60px;
     font-weight: bold;
 text-align: center;
-padding-top: 140px;
+/* position: absolute; */
+
+
 
 }
 button{
@@ -40,6 +47,8 @@ button{
     width: 10%;
     font-size: 20px;
     font-weight: bold;
+    
+    
     
     
 }
@@ -61,7 +70,8 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 5px;
-   
+   position: relative;
+   z-index: 2;
     /* position: relative;
     z-index: -1; */
   }
@@ -193,6 +203,14 @@ main {
         
        
     } 
+    h1{
+        font-size: 20px;
+        font-weight: bold;
+    text-align: center;
+    padding-top: 100px;
+    margin-right: 90px;
+    
+    }
 }
  footer p{
     width: 100%;
@@ -213,7 +231,7 @@ main {
       margin-right: 80px;
     }
     h1{
-        font-size: 40px;
+        font-size: 30px;
         font-weight: bold;
     text-align: center;
     padding-top: 100px;
@@ -240,7 +258,7 @@ main {
     float: left;
  width: 20%;
  height: 60px;
- margin-left: 70px;
+ margin-left: 50px;
  margin-top: 20px;
 }
 .small{
