--- a/style.css
+++ b/style.css
@@ -1,274 +1,181 @@
 *{
-    box-sizing: border-box;
-    margin: 0;
+box-sizing: border-box;
+margin: 0;
 }
 body{
-    background-color: rgb(223, 217, 217);
+background-color: rgb(223, 217, 217);
 }
-/* this is my header css */
+/* This is my header css */
 header{
-    width: 100%;
-    height: 10vh;
-    position: fixed;
-  z-index: 3;
-    background-color:white;
- 
+width: 100%;
+height: 10vh;
+position: fixed;
+z-index: 3;
+background-color:white;
 }
-
 .menu{
-    position: absolute;
-    right: 0;
-    height: 60px;
-    width: 50px;
-    margin-right: 30px;
-    margin-top: 15px;
-    
-    
+position: absolute;
+right: 0;
+height: 60px;
+width: 50px;
+margin-right: 30px;
+margin-top: 15px;
 }
 .logo{
-    position: absolute;
-    left: 0;
+position: absolute;
+left: 0;
 }
-
- 
 h1{
-    font-size: 60px;
-    font-weight: bold;
+font-size: 60px;
+font-weight: bold;
 text-align: center;
-/* position: absolute; */
-
-
-
 }
 button{
-    background-color: yellow;
-    border-radius: 5px;
-    height: 40px;
-    width: 10%;
-    font-size: 20px;
-    font-weight: bold;
-    
-    
-    
-    
+background-color: yellow;
+border-radius: 5px;
+height: 40px;
+width: 10%;
+font-size: 20px;
+font-weight: bold;
 }
 a{
-    text-decoration: none;
-    
+text-decoration: none;
 }
 button:hover{
-    background-color:red;
+background-color:red;
 }
 a:hover{
-    color: white;
+color: white;
 }
 main {
-    background-image: url("assets/reichstag.jpg");
-    width: 100%;
-    height:120vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 5px;
-   position: relative;
-   z-index: 2;
-    /* position: relative;
-    z-index: -1; */
-  }
- 
- 
-  
-  .main_content {
-      text-align: center;
-      color: white;
-      top: 40%;
-      left: 10%;
-      position: absolute;
-     z-index: 1;
-    margin-right: 200px;
-    width: 80%;
-  }
+background-image: url("assets/reichstag.jpg");
+width: 100%;
+height:120vh;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+margin-bottom: 5px;
+position: relative;
+z-index: 2;
+}
+.main_content {
+text-align: center;
+color: white;
+top: 40%;
+left: 10%;
+position: absolute;
+z-index: 1;
+margin-right: 200px;
+width: 80%;
+}
 .big{
-    width: 30%;
-    display: inline-block;
-    margin-left: 13%;
-    margin-top: 30px;
-    
+width: 30%;
+display: inline-block;
+margin-left: 13%;
+margin-top: 30px;
 }
 .icone{
-    float: left;
- width: 40%;
- height: 100px;
- 
+float: left;
+width: 40%;
+height: 100px;
 }
 .small{
- float: right;
-    width: 60%;
- height: 100px;
- padding-top: 20px;
- 
- 
+float: right;
+width: 60%;
+height: 100px;
+padding-top: 20px;
 }
-
-
-
-
-
-
-/* 
-
-/* fin exemple */
-/* .after_main{
-    width: 100%;
-    height: 50vh;
-    border: 1px solid red;
-    float: left;
-    margin-top: 20px;
-} */
-/* .blog{
-   float: left;
-    height: 20vh;
-    width: 40%;
-    border: 1px solid red;
-    margin-left: 8%;
-   
-} */
-/* .small_blog{
-    float: left;
-    width: 100%;
-    height: 10vh;
-} */
-/* .icon{
-    display: inline-block;
-    height: 15vh;
-    width: 20%;
-    border: 1px solid blue;
-   
-   
-}
-.text{
-   
-
-    height: 15vh;
-    width: 75%;
-    border: 1px solid blue;
-    
-}
-.icon img{
-    width: 30%;
-    height: 15vh;
-}  */
- 
 @media screen and  (min-height:0) and (max-height:95px){
-    header{
-        width: 100%;
-        height: 90vh;
-        
-        
-       
-    } 
+header{
+width: 100%;
+height: 90vh;
+} 
 }
 @media screen and  (min-height:95px) and (max-height:165px){
-    header{
-        width: 100%;
-        height: 50vh;
-        
-        
-       
-    } 
+header{
+width: 100%;
+height: 50vh;
+} 
 }
 @media screen and  (min-height:165px) and (max-height:270px){
-    header{
-        width: 100%;
-        height: 45vh;
-        
-        
-       
-    } 
+header{
+width: 100%;
+height: 45vh;
+} 
 }
 @media screen and  (min-height:270px) and (max-height:305px){
-    header{
-        width: 100%;
-        height: 30vh;
-        
-        
-       
-    } 
+header{
+width: 100%;
+height: 30vh;
+} 
 }
 @media screen and  (min-height:305px) and (max-height:700px){
-    header{
-        width: 100%;
-        height: 20vh;
-        
-        
-       
-    } 
-    h1{
-        font-size: 20px;
-        font-weight: bold;
-    text-align: center;
-    padding-top: 100px;
-    margin-right: 90px;
-    
-    }
+header{
+width: 100%;
+height: 20vh;
+} 
+h1{
+font-size: 20px;
+font-weight: bold;
+text-align: center;
+padding-top: 100px;
+margin-right: 90px;
+}
 }
  footer p{
-    width: 100%;
-    height: 80px;
-    background: gray;
-    color: white;
-    top: 180%;
-    margin-top: 120px;
+width: 100%;
+height: 80px;
+background: gray;
+color: white;
+top: 180%;
+margin-top: 120px;
 }
 @media screen and ( max-width:900px){
-    .main_content {
-        text-align: center;
-        color: white;
-        top: 40%;
-        left: 25%;
-        position: absolute;
-       z-index: 1;
-      margin-right: 80px;
-    }
-    h1{
-        font-size: 30px;
-        font-weight: bold;
-    text-align: center;
-    padding-top: 100px;
-    margin-right: 90px;
-    
-    }
-    button{
-        background-color: yellow;
-        border-radius: 5px;
-        height: 40px;
-        width: 40%;
-        font-size: 15px;
-        font-weight: bold;
-        margin-right: 90px;
-    }
-/* icone */
+.main_content {
+text-align: center;
+color: white;
+top: 40%;
+left: 25%;
+position: absolute;
+z-index: 1;
+margin-right: 80px;
+}
+h1{
+font-size: 30px;
+font-weight: bold;
+text-align: center;
+padding-top: 100px;
+margin-right: 90px;
+}
+button{
+background-color: yellow;
+border-radius: 5px;
+height: 40px;
+width: 40%;
+font-size: 15px;
+font-weight: bold;
+margin-right: 90px;
+}
+/* Icone */
 .big{
-    width: 100%;
-    display: inline-block;
-    margin-left: 0%;
-    margin-top: 30px;
+width: 100%;
+display: inline-block;
+margin-left: 0%;
+margin-top: 30px;
 }
 .icone{
-    float: left;
- width: 20%;
- height: 60px;
- margin-left: 50px;
- margin-top: 20px;
+float: left;
+width: 20%;
+height: 60px;
+margin-left: 50px;
+margin-top: 20px;
 }
 .small{
- float: right;
-    width: 60%;
- height: 100px;
- padding-top: 20px;
- 
+float: right;
+width: 60%;
+height: 100px;
+padding-top: 20px;
 }
-
 }
 
 
