--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ background-color:red;
 }
 a:hover{
 color: white;
+
 }
 main {
 background-image: url("assets/reichstag.jpg");
@@ -135,7 +136,6 @@ margin-top: 120px;
 text-align: center;
 color: white;
 top: 40%;
-left: 25%;
 position: absolute;
 z-index: 1;
 margin-right: 80px;
@@ -145,7 +145,9 @@ font-size: 30px;
 font-weight: bold;
 text-align: center;
 padding-top: 100px;
+
 margin-right: 90px;
+margin: 0 auto;
 }
 button{
 background-color: yellow;
@@ -154,7 +156,7 @@ height: 40px;
 width: 40%;
 font-size: 15px;
 font-weight: bold;
-margin-right: 90px;
+margin: 0;
 }
 /* Icone */
 .big{
